# cmake-tamplate

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.c.89DE4890D6789EA6.idx  main.h.0A6ADD85202F88AF.idx
include/: main.h
src/: main.c
